# toolkit

./: .coveragerc  .cursorignore  .env.tmpl  .env_trial  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.cdf-tk.md  CHANGELOG.templates.md  CONTRIBUTING.md  DRIFT_POC_TODO.md  Design Proposal_ Toolkit Node Respace Utility (1).md  Dockerfile  INTERNAL.md  LIBRARIES.md  LICENSE  Procfile  README.md  action.yml  build.py  build_cmd_flow.md  cdf-tk  cdf-tk-dev.py  cdf.py  cdf.toml  clean.py  config.dev.yaml  config.prod.yaml  config.yaml  default.config.yaml  default.packages.yaml  deploy.py  dev.py  dev_build.py  device_code.py  example.local.yaml  global.yaml  last_git_message.txt  (+15 more)
.claude/: settings.json
.cursor/: settings.json
.cursor/rules/: gh-cli.mdc  send-it.mdc  stage-it.mdc  start-it.mdc
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.gemini/: styleguide.md
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/workflows/: build.yml  coverage.yml  demo.yml  deploy.yml  dev.yml  prepare-release.yaml  release.yaml  smoke.yaml  trial.yml
acme/: config.dev.yaml  config.prod.yaml
branding/: toolkit.txt
builtin_modules/: package.toml
builtin_modules/bootcamp/: default.config.yaml
builtin_modules/cdf_common/: module.toml
builtin_modules/cdf_ingestion/: default.config.yaml
builtin_modules/common/: README.md
builtin_modules/infield/: default.config.yaml
builtin_modules/sourcesystem/: README.md
cdf_project_template/: dump.py  load.py
cdf_tk/: delete.py  load.py  templates.py  utils.py
cognite-toolkit/: cdf.py
cognite-toolkit/cdf_tk/: bootstrap.py  templates.py
cognite-toolkit/local_modules/: README.md
cognite-toolkit/modules/: README.md
cognite/loadmaster/: build.py
cognite_toolkit/: .env.tmpl  .gitignore  README.md  __init__.py  _cdf.py  _system.yaml  _version.py  api.py  build_info.dev.yaml  cdf.py  config.dev.infield.light.yaml.tmp  config.dev.yaml  config.yaml  default.config.yaml  default.packages.yaml  environments.yaml  local.yaml  packages.yaml
cognite_toolkit/_api/: __init__.py  api_client.py  data_classes.py  exceptions.py  modules_api.py  run_api.py
cognite_toolkit/_builtin_modules/: cdf.toml  default.environments.yaml  package.toml  packages.toml
cognite_toolkit/_cdf_tk/: _commands.py  _get_type_hints.py  _migration.yaml  auth.py  bootstrap.py  build.py  cdf_toml.py  clean.py  constants.py  describe.py  dump.py  exceptions.py  feature_flags.py  hints.py  plugins.py  protocols.py  pull.py  run.py  tracker.py  ui.py  ui_checkbox_follow_pointer.py  user_warnings.py  utils.py  validation.py  warnings.py
cognite_toolkit/_repo_files/: .gitignore  cdf.toml  cdf.toml.tmpl
cognite_toolkit/_resources/: cdf.toml
cognite_toolkit/cdf_tk/: _get_type_hints.py  _migration.yaml  bootstrap.py  delete.py  describe.py  dump.py  load.py  migration_help.py  pull.py  run.py  templates.py  utils.py  ux.md
cognite_toolkit/cognite_modules/: README.md  _system.yaml  default.config.yaml  default.environments.yaml  default.global.yaml  default.packages.yaml  package.toml
cognite_toolkit/common_function_code/: requirements.txt  tool.py
cognite_toolkit/custom_modules/: README.md
cognite_toolkit/demo/: __init__.py  _base.py
cognite_toolkit/experimental/: README.md
cognite_toolkit/jib02/: README.md  config.dev.yaml
cognite_toolkit/jib03/: README.md  config.dev.yaml
common/: task.py
demo/: README.md  config.cdf_auth_readwrite_all.yaml  config.cdf_infield_common.yaml  config.demo.yaml  config.yaml  demo.config.yaml  demo_config.yaml  environments.yaml  local.yaml  old_init.py  postproc.py  preproc.py  preproc.sh
docker/: Dockerfile
docs/: advanced.md  build_command_v2_checklist.md  build_command_v2_examples.py  build_command_v2_plan.md  idp.md  overview.md
examples/: README.md
experimental/: README.md
foo/: config.dev.yaml  config.prod.yaml
init_modules_41npp0u5.tmp/: config.dev.yaml  config.prod.yaml
migration_logs_2025-10-25/: part-0000.AssetsItems.csv
module_upgrade/: README.md  calculate_hashes.py  cdf.toml  run_check.py
modules/: README.md
my_organization/: config.dev.yaml  config.prod.yaml
my_pygen/: build_info.dev.yaml  config.dev.yaml
my_pygen2/: config.dev.yaml
needle/: config.dev.yaml
pack/: build.sh  docker-run.sh  example-local-run.sh  run.sh
plan/: client_refactoring_tasks.md  create_jira_tasks.py  tasks.md
purge_logs_2026-04-24/: purge_20260424-part-0000.PurgeLogs.ndjson
qa_set_pending_files/: file_qa_case1_happy_path.ipynb  file_qa_case2_cascade_delete.ipynb  file_qa_case3_mismatch.ipynb  file_qa_case4_delete_asset_centric.ipynb  file_qa_case5_list.ipynb  file_qa_case6_duplicate_ts.ipynb  file_qa_case7_existing_cognite_file.ipynb  file_qa_load_testing.ipynb  qa_load_testing_results_files.csv  ts_qa_case2_cascade_delete.ipynb
scripts/: bootstrap.py  clean_containers.py  datamodel.py  delete.py  dump.py  load.py  load_yaml.py  run.py  templates.py  transformations.py  utils.py  worker.py
technical_decision_log/: README.md  TDL-0001-drop-package-selection.md  TDL-0002-download-single-folder.md  TDL-0003-interactive-mode-change-on-patch.md  TDL-0004-error-warning-semantics.md  TEMPLATE.md
tests/: README.md  approval_client.py  auth_utils.py  change_file_endings.py  conftest.py  constants.py  test_approval_modules.py  test_behavior.py  test_build.py  test_cognite_toolkit_package.py  test_output.py  test_versions.py  trigger_mixpanel_event.py  utils.py
tests/data/: __init__.py
tests_bigsmoke/: entrypoint.sh  exitpoint.sh  test_build.py
tests_migrations/: README.md  calculate_hashes.py  constants.py  create_environments.py  create_init_projects.py  migrations.py  run_module_upgrade.py  test_modules_upgrade.py  tests_migrations.py
tests_smoke/: README.md  check_smoke_results.py  conftest.py  constants.py  exceptions.py
utils/: build.py  datamodel.py  delete.py  load.py  templates.py  transformation_types.py  transformations.py  transformations_api.py  transformations_config.py  utils.py
(+4264 files in other folders)
