[project]
name = "cognite_toolkit"
version = "0.0.0"
description = "Official Cognite Data Fusion tool for project templates and configuration deployment"
authors = [
    {name ="Cognite AS", email="support@cognite.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv >=1.0.0",
    "cognite-sdk>=7.87.0,<8.0.0",
    "httpx>=0.28.1",
    "pandas >=1.5.3, <3.0.0",
    "pyyaml >=6.0.1",
    "typer >=0.12.0, <1.0.0",
    "rich >=13.9.4",
    "questionary >=2.0.1",
    "tomli >=2.0.1, <3.0.0; python_version < '3.11'",
    "packaging >=25",
    "typing-extensions >=4.0.0",
    "toml >=0.10.2",
    "sentry-sdk >=2.1.0",
    "mixpanel >=4.10.1",
    "pydantic >=2.12.0",
    "python-dateutil>= 2.9.0",
    # Pip is used in the cognite run function local
    "pip>=25.0.1",
    "filelock>=3.18.0",
]

[project.urls]
Homepage = "https://docs.cognite.com/cdf/deploy/cdf_toolkit/"
Changelog = "https://github.com/cognitedata/toolkit/releases"
GitHub = "https://github.com/cognitedata/toolkit"
Documentation = "https://docs.cognite.com/cdf/deploy/cdf_toolkit/references/resource_library"

[dependency-groups]
dev = [
    "mypy >=1.8.0",
    "pre-commit >=4.0.0",
    "pytest >=8.0.0",
    "pytest-icdiff", # Used for better diffs in pytest
    "pytest-regressions >=2.4.2",
    "pytest-xdist >=3.6.1",
    "pytest-rerunfailures >=14.0",
    "types-PyYAML >=6",
    "types-toml >=0.10.8.20240310",
    "twine >=6.0.0",
    "toml >=0.10.2; python_version >= '3.11'",
    "pytest-freezegun >=0.4.2",
    "pytest-cov >=6.0.0",
    "setuptools >=75.0.0",
    "fastparquet >=2024.5.0",
    "types-requests >=2.32.0.20241016",
    "types-python-dateutil>=2.9.0.20250708",
    "marko >=2.1.2",
    "responses>=0.25.7",
    "respx>=0.22.0",
    "pytest-json-report>=1.5.0", # For generating JSON reports from tests, this is used in the smoke tests
]

[project.optional-dependencies]
table = [
    "pyarrow>=20.0.0",
    "openpyxl>=3.1.5",
]
sql = [
    "sqlparse >=0.5.3",
]
v08 = [

    "cognite-neat >=1.0.40"
]

[project.scripts]
cdf-tk = "cognite_toolkit._cdf:app"
cdf = "cognite_toolkit._cdf:app"

[tool.uv]
package = true

[tool.coverage.run]
source = ["cognite_toolkit"]
omit = [
    # The apps module only holds CLI entrypoints, so we skip it in coverage reports'
    "cognite_toolkit/_cdf_tk/apps/*",
    # Exclude CLI entrypoints
    "cognite_toolkit/_cdf.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "from typing_extensions import Self",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
    # In the case of doctests.
    "cognite_toolkit",
]

markers = [
    "toolkit: big smoke tests",
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "normal"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = []
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
# We use dynamic alias creation as much as possible. This is to ensure
# all aliases are consistentenly camelCase.
warn_required_dynamic_aliases = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
exclude = [
    # Ruff messes up the docstrings which are expected to be in Markdown format
    "cognite_toolkit/_cdf_tk/commands/_changes.py",
]

[tool.ruff.lint]
exclude = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cognite_toolkit"
module-root = ""
